--- a/sections/main-faq.liquid
+++ b/sections/main-faq.liquid
@@ -23,8 +23,22 @@
     {{ page.title | escape }}
   </h1>
   <div class="rte">
-    <p>1. IS MY CHILD ELIGIBLE FOR KINDERGARTEN REGISTRATION?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur a elit. In ut ullamcorper leo, eget euismod orci. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus musbulum ultricies aliquam convallis. Maecenas ut tellus mi. Proin tincidunt, lectus eu volutpat mattis, ante metus.</p>
+    <p>FORMAS DE ENTREGA</p>
+    <p>El envío se realiza a través de Andreani a todo el país luego de acreditado el pago. Una vez despachado el pedido te llegará el código de seguimiento por mail.
+      También podés seleccionar la opción de envío por la empresa de logísitica ENVIÁMELO, disponible en CABA y gran parte de Gran Buenos Aires. Una vez acreditado el pago el pedido se entrega en el transcurso de una semana y recibirás el número de seguimiento por mail para saber qué día tu pedido estará en distribución.
+      Por último podés retirar tu compra GRATIS en la librería en Caballito una vez acreditado el pago. Los datos para el retiro te llegarán por mail (si no te llega por favor revisá el correo no deseado).</p>
+    <p>MEDIOS DE PAGO</p>
+    <p>La tienda utiliza el sistema Mercado Pago, que permite pagar con tarjetas de débito, crédito y en efectivo.
+      [Podés ver los medios de pago y promociones disponibles en Mercado Pago aquí.]</p>
+    <p>POLÍTICA DE CAMBIOS</p>
+    <p>Todos los libros tienen cambio. Si necesitás realizar un cambio te ofrezco las siguientes formas:<br/>
+      Gratis: coordinando una cita en la librería. Para eso ponete en contacto enviando un mail a libroferoz@gmail.com con el nro. de orden como referencia.<br/>
+      Con envío: El costo del envío del producto hasta la librería y el nuevo envío a domicilio corren por cuenta del comprador. Para eso ponete en contacto enviando un mail a libroferoz@gmail.com con el nro. de orden como referencia y te enviaré un link de pago por el costo del envío.</p>
+    <p>Los cambios solo pueden ser realizados durante los 30 días siguientes a la compra. El libro deberá estar en perfectas condiciones, con la etiqueta con la que fue entregado y factura. El valor del libro siempre será el correspondiente a la factura de compra.</p>
+    <p>POLÍTICA DE DEVOLUCIÓN</p>
+    <p>Podes devolver cualquier libro comprado en la tienda online hasta 10 días después de realizada la compra. Para eso ponete en contacto enviando un mail a libroferoz@gmail.com con el nro. de orden como referencia. Los libros deben encontrarse en el mismo estado en el que fueron enviados, con la etiqueta y la factura. Podés entregar los libros sin cargo en la librería en Caballito o enviarlos a la dirección que te proporcionaré para tal fin. Una vez que los reciba comprobaré el estado de los libros y si están en buenas condiciones realizaré la devolución del total abonado por los libros por el mismo medio que lo pagaste. Se realiza la devolución únicamente del costo de los libros, no de los envíos.</p>
+    <p>DUDAS</p>
+    <p>Si querés saber cuándo vuelve a estar disponible un título que figura "sin stock" podés dejar tu mail en el producto y el sistema te enviará una notificación cuando esté nuevamente disponible. No dudes en consultar todas tus preguntas, ¡haré todo lo posible por ayudarte! Escribime a libroferoz@gmail.com :)</p>
   </div>
 </div>
 
