--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -81,7 +81,7 @@
 }
 .footer__column {
   width: 100%;
-  align-items: flex-end;
+  align-items: flex-start;
 }
 
 .footer__column--info {
@@ -122,7 +122,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: flex-end;
+  align-items: flex-start;
 }
 
 .footer-block--newsletter:only-child {
@@ -232,7 +232,7 @@
   display: inline-flex;
   flex-wrap: wrap;
   flex: initial;
-  padding: 1rem 0;
+  padding: 0;
 }
 
 .localization-form:only-child .button,
@@ -248,7 +248,7 @@
 
 @media screen and (min-width: 750px) {
   .footer__localization {
-    padding: 0.4rem 0;
+    padding: 0;
     justify-content: flex-start;
   }
 
@@ -272,7 +272,7 @@
   }
 
   .footer__localization h2 {
-    margin: 1rem 0 0;
+    margin: 0;
   }
 }
 
