--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -147,7 +147,7 @@
 }
 
 .footer-block__heading {
-  margin-bottom: 2rem;
+  margin-bottom: 2rem !important;
   margin-top: 0;
   font-size: calc(var(--font-heading-scale) * 1.6rem);
 }
