Use Rochester as main header
Signed-off-by: Sebastian Martinez <me@sebastinez.dev>

--- a/assets/base.css
+++ b/assets/base.css
@@ -223,7 +223,7 @@
 
 @font-face {
   font-family: "Rochester";
-  src: url("Rochester-Regular.ttf") format("TrueType");
+  src: url("./Rochester-Regular.ttf") format("TrueType");
 }
 /* base */
 
