Increase main title font-size
Signed-off-by: Sebastian Martinez <me@sebastinez.dev>

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -508,7 +508,7 @@
                 alt: logo_alt
               }}
             {%- else -%}
-              <span class="h2" style="font-family: Rochester;">{{ shop.name }}</span>
+              <span class="h2" style="font-family: Rochester; font-size: 4rem">{{ shop.name }}</span>
             {%- endif -%}
           </a>
       {%- if request.page_type == 'index' -%}
