Remove custom attributes
Signed-off-by: Sebastian Martinez <me@sebastinez.dev>

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -178,7 +178,8 @@
               </p>
             {%- when 'custom_liquid' -%}
               {{ block.settings.custom_liquid }}
-            {%- when 'collapsible_tab' -%}
+            {%- comment -%}
+              {%- when 'collapsible_tab' -%}
               <div class="product__accordion accordion quick-add-hidden" {{ block.shopify_attributes }}>
                 <details id="Details-{{ block.id }}-{{ section.id }}">
                   <summary>
@@ -196,6 +197,7 @@
                   </div>
                 </details>
               </div>
+            {%- endcomment -%}
             {%- when 'quantity_selector' -%}
               <div
                 class="product-form__input product-form__quantity{% if settings.inputs_shadow_vertical_offset != 0 and settings.inputs_shadow_vertical_offset < 0 %} product-form__quantity-top{% endif %}"
