--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -9,13 +9,13 @@
 }
 
 @media only screen and (max-width: 749px) {
-  .banner--content-align-mobile-right .banner__box {
+  /* .banner--content-align-mobile-right .banner__box {
     text-align: right;
   }
 
   .banner--content-align-mobile-left .banner__box {
     text-align: left;
-  }
+  } */
 }
 
 @media only screen and (min-width: 750px) {
@@ -35,7 +35,7 @@
 }
 
 @media screen and (max-width: 749px) {
-  .banner--small.banner--mobile-bottom:not(.banner--adapt) .banner__media,
+  /* .banner--small.banner--mobile-bottom:not(.banner--adapt) .banner__media,
   .banner--small.banner--stacked:not(.banner--mobile-bottom):not(.banner--adapt) > .banner__media {
     height: 28rem;
   }
@@ -60,7 +60,7 @@
 
   .banner--large:not(.banner--mobile-bottom):not(.banner--adapt) .banner__content {
     min-height: 39rem;
-  }
+  } */
 }
 
 @media screen and (min-width: 750px) {
@@ -127,7 +127,7 @@
 }
 
 @media screen and (max-width: 749px) {
-  .banner:not(.banner--stacked) {
+  /* .banner:not(.banner--stacked) {
     flex-direction: row;
     flex-wrap: wrap;
   }
@@ -138,7 +138,7 @@
 
   .banner--stacked .banner__media {
     flex-direction: column;
-  }
+  } */
 }
 
 .banner__media {
@@ -159,19 +159,19 @@
 }
 
 @media screen and (max-width: 749px) {
-  .banner--stacked .banner__media-half {
+  /* .banner--stacked .banner__media-half {
     width: 100%;
   }
 
   .banner--stacked .banner__media-half + .banner__media-half {
     order: 1;
-  }
+  } */
 }
 
 @media screen and (min-width: 750px) {
-  .banner__media {
+  /* .banner__media {
     height: 100%;
-  }
+  } */
 }
 
 .banner--adapt,
@@ -180,7 +180,7 @@
 }
 
 @media screen and (max-width: 749px) {
-  .banner--mobile-bottom .banner__media,
+  /* .banner--mobile-bottom .banner__media,
   .banner--stacked:not(.banner--mobile-bottom) .banner__media {
     position: relative;
   }
@@ -230,7 +230,7 @@
 
   .banner--stacked .banner__media-image-half {
     width: 100%;
-  }
+  } */
 }
 
 .banner__content {
@@ -295,13 +295,13 @@
 }
 
 @media screen and (max-width: 749px) {
-  .banner--mobile-bottom:not(.banner--stacked) .banner__content {
+  /* .banner--mobile-bottom:not(.banner--stacked) .banner__content {
     order: 2;
   }
 
   .banner:not(.banner--mobile-bottom) .field__input {
     background-color: transparent;
-  }
+  } */
 }
 
 .banner__box {
@@ -313,6 +313,13 @@
   width: 100%;
   word-wrap: break-word;
   z-index: 1;
+  background: transparent;
+  color: white;
+}
+
+.banner__box h2 {
+  color: white !important;
+
 }
 
 @media screen and (min-width: 750px) {
@@ -339,10 +346,10 @@
 }
 
 @media screen and (max-width: 749px) {
-  .banner--mobile-bottom::after,
+  /* .banner--mobile-bottom::after,
   .banner--mobile-bottom .banner__media::after {
     display: none;
-  }
+  } */
 }
 
 .banner::after,
@@ -376,9 +383,9 @@
 }
 
 @media screen and (max-width: 749px) {
-  .banner--stacked .banner__box {
+  /* .banner--stacked .banner__box {
     width: 100%;
-  }
+  } */
 }
 
 @media screen and (min-width: 750px) {
@@ -412,14 +419,14 @@
 }
 
 @media screen and (max-width: 749px) {
-  .banner--content-align-mobile-right .banner__buttons--multiple {
+  /* .banner--content-align-mobile-right .banner__buttons--multiple {
     justify-content: flex-end;
   }
 
   .banner--content-align-mobile-center .banner__buttons--multiple > * {
     flex-grow: 1;
     min-width: 22rem;
-  }
+  } */
 }
 
 @media screen and (min-width: 750px) {
