--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -88,10 +88,11 @@
 .footer__column--info {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   padding-left: 2rem;
   padding-right: 2rem;
+    margin-top: 1rem;
 }
 
 @media screen and (min-width: 750px) {
@@ -148,13 +149,15 @@
 }
 
 .footer-block__heading {
-  margin-bottom: 2rem !important;
-  margin-top: 0;
+  margin: 1rem 1rem 0.5rem;
+  margin-bottom: 2rem;
   font-size: calc(var(--font-heading-scale) * 1.6rem);
 }
 
 @media screen and (min-width: 990px) {
   .footer-block__heading {
+    margin: 1rem 1rem 0.5rem;
+    margin-bottom: 2rem;
     font-size: calc(var(--font-heading-scale) * 1.8rem);
   }
 }
@@ -166,14 +169,6 @@
 
 .footer__list-social.list-social:only-child {
   justify-content: center;
-}
-
-.footer-block__newsletter {
-  text-align: center;
-}
-
-.newsletter-form__field-wrapper {
-  max-width: 36rem;
 }
 
 @media screen and (min-width: 750px) {
@@ -209,12 +204,10 @@
 }
 
 .footer__localization {
-  display: flex;
   flex-direction: row;
   justify-content: center;
   align-content: center;
   flex-wrap: wrap;
-  padding: 1rem 1rem 0;
 }
 
 .footer__localization:empty {
@@ -230,7 +223,6 @@
 }
 
 .localization-form:only-child {
-  display: inline-flex;
   flex-wrap: wrap;
   flex: initial;
   padding: 0;
@@ -238,12 +230,12 @@
 
 .localization-form:only-child .button,
 .localization-form:only-child .localization-form__select {
-  margin: 1rem 1rem 0.5rem;
   flex-grow: 1;
 }
 
 .footer__localization h2 {
   margin: 1rem 1rem 0.5rem;
+  margin-bottom: 2rem;
   color: rgba(var(--color-foreground), 0.75);
 }
 
@@ -269,10 +261,6 @@
 
   .localization-form:only-child .button,
   .localization-form:only-child .localization-form__select {
-    margin: 1rem 0;
-  }
-
-  .footer__localization h2 {
     margin: 0;
   }
 }
@@ -338,6 +326,7 @@ noscript .localization-form__select {
   -moz-appearance: none;
   color: rgb(var(--color-foreground));
   width: 100%;
+  height: 4.5rem;
   padding-right: 4rem;
   padding-bottom: 1.5rem;
 }
@@ -369,7 +358,6 @@ noscript .localization-selector.link {
 
 .footer__copyright {
   text-align: center;
-  margin-top: 1.5rem;
 }
 
 @media screen and (min-width: 750px) {
