--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -497,7 +497,7 @@
         <h1 class="header__heading">
       {%- endif -%}
           <a href="{{ routes.root_url }}" class="header__heading-link link link--text focus-inset">
-            {%- if section.settings.logo != blank -%}
+            {%- comment -%} {%- if section.settings.logo != blank -%}
               {%- assign logo_alt = section.settings.logo.alt | default: shop.name | escape -%}
               {%- assign logo_height = section.settings.logo_width | divided_by: section.settings.logo.aspect_ratio -%}
               {{ section.settings.logo | image_url: width: section.settings.width | image_tag:
@@ -507,9 +507,20 @@
                 width: section.settings.logo_width,
                 alt: logo_alt
               }}
-            {%- else -%}
+            {%- else -%} {%- endcomment -%}
+            <div>
               <span class="h2" style="font-family: Rochester; font-size: 4rem">{{ shop.name }}</span>
-            {%- endif -%}
+              {%- assign logo_alt = section.settings.logo.alt | default: shop.name | escape -%}
+              {%- assign logo_height = section.settings.logo_width | divided_by: section.settings.logo.aspect_ratio -%}
+              {{ section.settings.logo | image_url: width: section.settings.width | image_tag:
+                class: 'header__heading-logo',
+                widths: '50, 100, 150, 200, 250, 300, 400, 500',
+                height: logo_height,
+                width: section.settings.logo_width,
+                alt: logo_alt
+              }}
+            </div>
+            {%- comment -%} {%- endif -%} {%- endcomment -%}
           </a>
       {%- if request.page_type == 'index' -%}
         </h1>
