--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -35,10 +35,17 @@
   .header__heading-logo {
     max-width: {{ section.settings.logo_width }}px;
   }
+  
+  .title_with_logo .h2 {
+    display: none;
+  }
 
   @media screen and (min-width: 990px) {
     header-drawer {
       display: none;
+    }
+    .title_with_logo span.h2 {
+      display: block;
     }
   }
 
@@ -72,6 +79,12 @@
     padding-bottom: 1rem;
     padding-top: 1rem;
     line-height: calc(1 + 0.8 / var(--font-body-scale));
+  }
+  .title_with_logo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
   }
 
   @media screen and (min-width: 750px) {
@@ -497,18 +510,7 @@
         <h1 class="header__heading">
       {%- endif -%}
           <a href="{{ routes.root_url }}" class="header__heading-link link link--text focus-inset">
-            {%- comment -%} {%- if section.settings.logo != blank -%}
-              {%- assign logo_alt = section.settings.logo.alt | default: shop.name | escape -%}
-              {%- assign logo_height = section.settings.logo_width | divided_by: section.settings.logo.aspect_ratio -%}
-              {{ section.settings.logo | image_url: width: section.settings.width | image_tag:
-                class: 'header__heading-logo',
-                widths: '50, 100, 150, 200, 250, 300, 400, 500',
-                height: logo_height,
-                width: section.settings.logo_width,
-                alt: logo_alt
-              }}
-            {%- else -%} {%- endcomment -%}
-            <div>
+            <div class="title_with_logo">
               <span class="h2" style="font-family: Rochester; font-size: 4rem">{{ shop.name }}</span>
               {%- assign logo_alt = section.settings.logo.alt | default: shop.name | escape -%}
               {%- assign logo_height = section.settings.logo_width | divided_by: section.settings.logo.aspect_ratio -%}
@@ -520,7 +522,6 @@
                 alt: logo_alt
               }}
             </div>
-            {%- comment -%} {%- endif -%} {%- endcomment -%}
           </a>
       {%- if request.page_type == 'index' -%}
         </h1>
