--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -52,7 +52,7 @@
         </div>
 
         <div class="product-count-vertical light" role="status">
-          <h2 class="product-count__text text-body">
+          {%- comment -%} <h2 class="product-count__text text-body">
             <span id="ProductCountDesktop">
               {%- if collection.results_count -%}
                 {{ 'templates.search.results_with_count' | t: terms: collection.terms, count: collection.results_count }}
@@ -62,7 +62,7 @@
                 {{ 'products.facets.product_count' | t: product_count: collection.products_count, count: collection.all_products_count }}
               {%- endif -%}
             </span>
-          </h2>
+          </h2> {%- endcomment -%}
           <div class="loading-overlay__spinner">
             <svg
               aria-hidden="true"
@@ -74,7 +74,7 @@
               <circle class="path" fill="none" stroke-width="6" cx="33" cy="33" r="30"></circle>
             </svg>
           </div>
-        </div>  
+        </div>
       </form>
     </facet-filters-form>
   {%- endif -%}
