--- a/snippets/facets.liquid
+++ b/snippets/facets.liquid
@@ -145,8 +145,8 @@
                                     stroke-linejoin="round" />
                                 </svg>
 
-                              {%- comment -%} <span aria-hidden="true">{{ value.label | escape }} ({{ value.count }})</span>
-                              <span class="visually-hidden">{{ value.label | escape }} ({% if value.count == 1 %}{{ 'products.facets.product_count_simple.one' | t: count: value.count }}{% else %}{{ 'products.facets.product_count_simple.other' | t: count: value.count }}{% endif %})</span> {%- endcomment -%}
+                              <span aria-hidden="true">{{ value.label | escape }} ({{ value.count }})</span>
+                              <span class="visually-hidden">{{ value.label | escape }} ({% if value.count == 1 %}{{ 'products.facets.product_count_simple.one' | t: count: value.count }}{% else %}{{ 'products.facets.product_count_simple.other' | t: count: value.count }}{% endif %})</span>
                             </label>
                           </li>
                         {%- endfor -%}
